Fixed grid layout issue made typing.js faster reverted style.css to original

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -345,7 +345,7 @@ textarea.form-control {
 /* ---------------------------------------------- */
 
 #home {
-	background: url(img/background.png);
+	background: url(../images/background.png);
 	background-color: #222;
 	background-attachment: fixed;
 	background-repeat: no-repeat;
@@ -359,7 +359,7 @@ textarea.form-control {
 
 .home-overlay {
     background-color: rgba(44, 62, 80, 0.3);
-    background-image: url("img/pattern.png");
+    background-image: url("../images/pattern.png");
     background-repeat: repeat;
     height: 100%;
     left: 0;
@@ -759,7 +759,7 @@ i.fa-angle-double-down{
 }
 
 #status {
-	background-image: url(img/preloader.gif);
+	background-image: url(../images/preloader.gif);
 	background-position: center;
 	background-repeat: no-repeat;
 	height: 200px;
@@ -824,7 +824,7 @@ i.fa-angle-double-down{
 	min-width: 100%;
 	max-width: 100%;
 	height: auto;
-	/* background: #3085a3; */
+	background: #3085a3;
 	text-align: center;
 	cursor: pointer;
 }
@@ -893,9 +893,9 @@ i.fa-angle-double-down{
 /***** Bubba *****/
 /*---------------*/
 
-/* figure.effect-bubba {
+figure.effect-bubba {
 	background: #854705;
-} */
+}
 
 figure.effect-bubba img {
 	opacity: 0.7;
